--- a/client/src/pages/Journal/JournalDetail.css
+++ b/client/src/pages/Journal/JournalDetail.css
@@ -93,7 +93,7 @@
 
 .edit-btn {
   background: var(--primary-color);
-  color: white;
+  color: var(--primary-contrast-text, white);
 }
 
 .edit-btn:hover {
@@ -102,7 +102,7 @@
 
 .delete-btn {
   background: var(--danger-color);
-  color: white;
+  color: var(--danger-contrast-text, white);
 }
 
 .delete-btn:hover:not(:disabled) {
@@ -207,6 +207,12 @@
 }
 
 .media-image {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+}
+
+.media-video {
   width: 100%;
   height: 150px;
   object-fit: cover;
